Registered new conflation processes
Registered the four conflation processes from
http://cobweb.gis.geo.tu-dresden.de:8080/wps_conflation/WebProcessingSer
vice?service=wps&version=1.0.0&Request=getcapabilities

--- a/WEB-INF/classes/META-INF/CustomWorkItemHandlers.conf
+++ b/WEB-INF/classes/META-INF/CustomWorkItemHandlers.conf
@@ -8,6 +8,9 @@
   "Pillar2FilterOnAttribute" : new cobweb.m24.GenericWorkItemHandlerClient(),
   "Pillar2AttributeRangeCheck" : new cobweb.m24.GenericWorkItemHandlerClient(),
   "ConflationGeometryDistance" : new cobweb.m24.GenericWorkItemHandlerClient(),
+  "ConflationZonalStats" : new cobweb.m24.GenericWorkItemHandlerClient(),
+  "ConflationDamerauLevenshteinDistance" : new cobweb.m24.GenericWorkItemHandlerClient(),
+  "ConflationTopologyRelation" : new cobweb.m24.GenericWorkItemHandlerClient(),
   "Pillar1GetSpatialAccuracy" : new cobweb.m24.GenericWorkItemHandlerClient(),
   "Pillar6CountTweetsWithLocation" : new cobweb.m24.GenericWorkItemHandlerClient(),
 ]
