--- a/WEB-INF/classes/META-INF/CustomWorkItemHandlers.conf
+++ b/WEB-INF/classes/META-INF/CustomWorkItemHandlers.conf
@@ -13,4 +13,9 @@
   "ConflationTopologyRelation" : new cobweb.m24.GenericWorkItemHandlerClient(),
   "Pillar1GetSpatialAccuracy" : new cobweb.m24.GenericWorkItemHandlerClient(),
   "Pillar6CountTweetsWithLocation" : new cobweb.m24.GenericWorkItemHandlerClient(),
+  "Pillar4PointInBuffer" : new cobweb.m24.GenericWorkItemHandlerClient(),
+  "Pillar4NumNeighbourNamed" : new cobweb.m24.GenericWorkItemHandlerClient(),
+  "Pillar4NumNeighbourSim" : new cobweb.m24.GenericWorkItemHandlerClient(),
+  "Pillar3ValueRange" : new cobweb.m24.GenericWorkItemHandlerClient(),
+  "Pillar1LineOfSightCoordinates" : new cobweb.m24.GenericWorkItemHandlerClient(),
 ]
